--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -1,34 +1,43 @@
-<div class="col-md-6 offset-md-3 mt-5">
-    <div class="alert alert-info">
-        Username: test<br />
-        Password: test
-    </div>
-    <div class="card">
-        <h4 class="card-header">Login</h4>
-        <div class="card-body">
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" formControlName="username" class="form-control"
+<div class="alert alert-info">
+    Username: test<br />
+    Password: test
+</div>
+<div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+
+<div class="container">
+    <div class="screen">
+        <div class="screen__content">
+            <form class="login" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <div class="login__field">
+                    <i class="login__icon fas fa-user"></i>
+                    <input type="text" placeholder="Username" formControlName="username" class="login__input"
                         [ngClass]="{ 'is-invalid': submitted && form['username'].errors }" />
                     <div *ngIf="submitted && form['username'].errors" class="invalid-feedback">
                         <div *ngIf="form['username'].errors['required']">Username is required</div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" formControlName="password" class="form-control"
-                        [ngClass]="{ 'is-invalid': submitted && form['password'].errors }" />
+                <div class="login__field">
+                    <i class="login__icon fas fa-lock"></i>
+                    <input type="password" formControlName="password" class="login__input"
+                        [ngClass]="{ 'is-invalid': submitted && form['password'].errors }" placeholder="Password" />
                     <div *ngIf="submitted && form['password'].errors" class="invalid-feedback">
                         <div *ngIf="form['password'].errors['required']">Password is required</div>
                     </div>
                 </div>
-                <button [disabled]="loading" class="btn btn-primary">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
+                <button [disabled]="loading" class="button login__submit">
+                    <span class="button__text">
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                        Log In Now
+                    </span>
+                    <i class="button__icon fas fa-chevron-right"></i>
                 </button>
-                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
             </form>
+        </div>
+        <div class="screen__background">
+            <span class="screen__background__shape screen__background__shape4"></span>
+            <span class="screen__background__shape screen__background__shape3"></span>
+            <span class="screen__background__shape screen__background__shape2"></span>
+            <span class="screen__background__shape screen__background__shape1"></span>
         </div>
     </div>
 </div>
