--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="alert alert-info">
+<div class="alert__info">
     Username: test<br />
     Password: test
 </div>
-<div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+<div *ngIf="error" class="alert__danger">{{error}}</div>
 
 <div class="container">
     <div class="screen">
