--- a/src/app/authentication/components/login/login.component.scss
+++ b/src/app/authentication/components/login/login.component.scss
@@ -1,16 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Raleway, sans-serif;
-}
-
-body {
-    background: linear-gradient(90deg, #C7C5F4, #776BCC);
-}
-
 .container {
     display: flex;
     align-items: center;
@@ -175,4 +162,26 @@ body {
 
 .social-login__icon:hover {
     transform: scale(1.5);
+}
+
+.alert__info {
+    background-color: #fff;
+    width: 15rem;
+    height: 5rem;
+    border-radius: 15px;
+    margin: 2rem auto;
+    text-align: center;
+    padding: 1rem 0;
+    color: #747474;
+}
+
+.alert__danger {
+    background-color: salmon;
+    width: 25rem;
+    height: 2.5rem;
+    border-radius: 15px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0.5rem 0;
+    color: #fff;
 }
