Added add and delete post functionality

--- a/src/app/feed/components/feed/feed.component.html
+++ b/src/app/feed/components/feed/feed.component.html
@@ -1,6 +1,7 @@
+<app-add-post></app-add-post>
 <div *ngIf="(posts$ | async)?.length">
     <div *ngFor="let post of posts$ | async">
-        <h2>{{ post.title }}</h2>
+        <button (click)="deletePost(post)">Delete Post</button>
         <p>{{ post.content }}</p>
     </div>
 </div>
