--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
-    <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink="/">Home</a>
-        <a class="nav-item nav-link" (click)="logout()">Logout</a>
-    </div>
+<nav class="navbar" *ngIf="currentUser">
+    <a class="nav-item" routerLink="/">Home</a>
+    <a class="nav-item" (click)="logout()">Logout</a>
 </nav>
